src/static/css/style.css
@font-face {
    font-family: "Louis George Cafe";
    src: url("/src/static/fonts/louis-george-cafe.ttf");
}

h1 {
    font-size: 3rem;
}

h2 {
    font-size: 2.5rem;
    text-align: center;
}

p, a {
    font-size: 1.5rem;
    text-decoration: none;
}

.purple-text {
    color: #bb8fce;
}

.light-text {
    color: #e8daef;
}

.dark-text {
    color: #202020;
}

.section-grid {
    display: grid;
    grid-gap: 1.5rem;
}

html, body {
    font-family: "Louis George Cafe", "sans-serif";
    margin: 0;
    padding: 0;
    height: 100%;
    max-width: 100vw;
    overflow-x: hidden;
}

header {
    background-color: #5b2c6f;
    font-size: 1.75rem;
}

#branding {
    display: grid;
    grid-template-areas: "header-logo . header-nav";
    padding: 1.5rem;
    border-bottom: 1px solid #f4ecf7;
}

#header-logo {
    width: 50px;
    grid-area: header-logo;
    fill: #e8daef;
}

nav {
    grid-area: header-nav;
    display: grid;    
    align-self: end;
    justify-self: end;
}

#navbar-nav {
    position: fixed;
    height: 100%;
    width: 0%;
    z-index: 1;
    top: 0px;
    right: 0px;
    background-color: #202020;
    transition: 0.25s;
    transition-property: width;
    text-align: left;
}

#navbar-nav a {
    text-decoration: none;
    margin: 0px 0px 40px 0px;
    font-size: 32px;
    display: block;
}

#navbar-open {
    cursor: pointer;
    background: none;
    border: none;
    fill: #e8daef;
    display: flex;
    flex-direction: row;
    align-items: center;
}

#navbar-open p {
    color: #e8daef;
}

#navbar-open svg {
    width: 2rem;
    margin-left: 0.8rem;
}

#about {
    padding: 0rem 2rem 2rem 2rem;
}

main {
    padding: 2rem 2rem;
    background-color: #ffffff;
}

.box-item {
    background-color: #F5F5F5;
    border-radius: 4px;
    box-shadow: 0px 1px 5px grey;
    padding: 0.25rem 1rem;
}

#skills {
    margin: 0rem 0rem -2.5rem 0rem;
    transform: translateY(-4rem);
    justify-content: center;
}

.skill-icons {
    display: flex;
    justify-content: center;
}

.skill-item div img {
    height: 3.5rem;
    margin: 0px 10px;
}

.skill-names {
    color: #717d7e;
    font-style: italic;
}

#projects {
    background-color: #e8daef;
    margin: 0rem -2rem;
    padding-bottom: 1rem;
}

#projects-background {
    padding: 1rem;
}

.project {
    background-color: #5b2c6f;
    color: #f5f5f5;
}

.project-tech {
    font-size: 18px;
    color: #ccd1d1;
    font-style: italic;
}

#contact {
    font-size: 1.25rem;
}

input[type=text] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0px;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

#message {
    font-family: "Louis George Cafe";
    min-width: 100%;
    resize: vertical;
    padding: 12px 20px;
    margin: 8px 0px;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

input[type=submit] {
    width: 100%;
    font-size: 1.25rem;
    background-color: #7d3c98;
    color: white;
    padding: 14px 20px;
    margin: 8px 0px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
}

.form-input-status {
    font-style: oblique;
}

footer {
    background-color: #202020;
    padding: 10px 0px 10px 0px;
}

#social-media-icons {
    display: flex;
    justify-content: center;
    transform: translateX(-20px);
}

.social-media-icon {
    margin: 0px 0.9rem;
    padding: 1.25rem;
    max-height: 4rem;
    transition: 0.2s;
    fill: #f4ecf7;
}

#copyright {
    text-align: center;
    font-size: 20px;
    color: #f4ecf7;
}

